.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easydoor-api-dp
  namespace: easydoor-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: easydoor-api
  template:
    metadata:
      labels:
        app: easydoor-api
    spec:
      containers:
        - name: easydoor-api
          image: gabezy/easydoor-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /q/health/started
              port: 8080
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            periodSeconds: 25
            failureThreshold: 3
            timeoutSeconds: 5
