.kube/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: easydoor-api-svc
  namespace: easydoor-api
spec:
  selector:
    app: easydoor-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
