.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easydoor-api-ing
  namespace: easydoor-api
spec:
  ingressClassName: traefik
  rules:
    - host: easydoor-api.vertenti.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easydoor-api-svc
                port:
                  number: 80
